# eeefff-org-2-website

./: .gitignore  .gitmodules  .ruby-gemset  Gemfile  README.md  Vagrantfile  bower.json  eeefff-org.cabal  eeefff-org2.cabal  package.yaml  project.clj  site.hs  slimlib.rb  stack.yaml  upload_to_eeefff_org.sh
config/: deploy.rb
css/: _about.scss  _algorithmic-solidarity.scss  _automated-recreation-zone.scss  _cat_scout.scss  _cloud_bushes.scss  _economic-orangery-2021.scss  _economic-orangery.scss  _error-friendly-networks.scss  _expedition_through_it_infrastructure.scss  _fleeting_coop.scss  _flow.scss  _fonts.scss  _from-the-future-to-the-present.scss  _hackathon_choreography.scss  _holed-futurism.scss  _index.scss  _menu.scss  _mobile_agitator.scss  _obj.scss  _outsourcing-paradise-post-pub.scss  _pdf-text.scss  _picnic.scss  _platform-perplex.scss  _prepare-to-synchronize.scss  _psychodata.scss  _scooters-training-session.scss  _sensory-room-with-42-cooling-fans.scss  _strawberry.scss  _subtitles-test.scss  _tactical-forgetting.scss  _traffic_loop.scss  app.scss  erosion-machine-timeline.scss  kapital-perplexed-species-manifesto.scss  simple-page.scss
documenta/: flcoop-documenta-01-kassel.slim  flcoop-documenta-03-documents-all.slim  flcoop-documenta-04-borisenok.slim  flcoop-documenta-05-efrussi.slim  flcoop-documenta-06-kotlyachkova.slim  flcoop-documenta-07-kotlyachkova-2.slim  flcoop-documenta-08-kotlyachkova-3.slim  flcoop-documenta-09-kotlyachkova-4.slim  flcoop-documenta-10-kotlyachkova-5.slim  flcoop-documenta-11-bychenkova.slim
en/: about.md  index.html  index.slim
innovation/: innovation-page-11.html
js/: app.js  op-erosion-machine-main-chunk.js  op-erosion-machine-prelude.js  op-erosion-machine-vendors-main.js
platform-perplex/: index.slim  mask.html
projects/: blockade.slim  cat-scout.slim  expedition-through-it-infrastructure.slim  face-an-interface.slim  flcoop-documenta-07-kotlyachkova-2.slim  flcoop-documenta-08-kotlyachkova-3.slim  fleeting-coop.slim  mobile-agitator.slim  obj.slim  picnic-near-data-center.slim  psychodata.slim  strawberry.slim
ru/: about.md  index.html  index.slim
scripts/: assemblage-kot-odin.rkt  assemblage-watchdog.rkt  css-utils.rkt  rmd-get-body.rb  rmd-get-head.rb  subtitels-utils.rkt  timeline-syntax.rkt  timeline.rkt  video-spinner-spi.rkt  video_utils.rkt
snippets/: make-tags.clj  start-server.clj
src/: site.hs
templates/: algorithmic-solidarity.slim  automated-recreation-zone.slim  default.html  economic-orangery-character.slim  economic-orangery-public-ng.slim  error-friendly-networks-teaser.slim  error-friendly-networks.slim  flow-old.slim  flow.slim  from-the-future-to-the-present.slim  hackathon-choreography.slim  header.html  human-works-as-human.slim  index.html  mystery-covered-with-the-darkness.slim  outsourcing-paradise-post-pub.slim  outsourcing-paradise.slim  platform-perplex.slim  prepare-to-synchronize.slim  scooters-training-session.slim  sensory-room-with-42-cooling-fans.slim  traffic-loop-layer-2.slim  traffic-loop-layer-3.slim  traffic-loop-nav.slim
(+309 files in other folders)
