name:               eeefff-org2
version:            0.1.0.0
build-type:         Simple
cabal-version:      >= 1.10

-- library w7w
--   hs-source-dirs: w7w/src
--   default-language: Haskell2010
--   -- exposed-modules: W7W.MultiLang
--   build-depends:  base == 4.*
--                   , hakyll == 4.16.*
--                   , hakyll-sass == 0.2.*
--                   , data-default
--                   -- , hsass  == 0.4.2
--                   , hsass  == 0.8.0
--                   , aeson
--                   , bytestring
--                   , string-conversions
--                   , filepath
--                   , MissingH
--                   , binary
--                   , text
--                   , attoparsec
--                   , mtl
--                   , errors
--                   , directory
--                   , MissingH
--                   , colour
--                   , pandoc
--                   , cache
--                   , hashable
--                   , yaml
--                   , containers
  
executable site
  main-is:          site.hs
  hs-source-dirs:   src
                    w7w/src
  build-depends:    base == 4.*
                  -- , w7w
                  , hakyll == 4.16.*
                  , hakyll-sass == 0.2.*
                  , data-default
                  -- , hsass  == 0.4.2
                  , hsass  == 0.8.0
                  , pandoc
                  , aeson
                  , bytestring
                  , string-conversions
                  , filepath
                  , MissingH
                  , binary
                  , text
                  , attoparsec
                  , mtl
                  , errors
                  , directory
                  , MissingH
                  , colour
                  , pandoc
                  , cache
                  , hashable
                  , yaml
                  , containers
  ghc-options:      -threaded
  default-language: Haskell2010
